Improve sorting of Projects and Profiles in UI
(cherry picked from commit b618226c50670fb5466c7d8255dc300580eb20a4)